--- a/src/lightrag_implementation/test.ipynb
+++ b/src/lightrag_implementation/test.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4cc954be",
    "metadata": {},
    "outputs": [
@@ -61,48 +61,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: [_] Faiss index loaded with 148 vectors from ./rag_storage/faiss_index_entities.index\n",
-      "INFO: [_] Faiss index loaded with 178 vectors from ./rag_storage/faiss_index_relationships.index\n",
-      "INFO: [_] Faiss index loaded with 40 vectors from ./rag_storage/faiss_index_chunks.index\n",
+      "INFO: [_] Faiss index loaded with 240 vectors from ./rag_storage/faiss_index_entities.index\n",
+      "INFO: [_] Faiss index loaded with 286 vectors from ./rag_storage/faiss_index_relationships.index\n",
+      "INFO: [_] Faiss index loaded with 86 vectors from ./rag_storage/faiss_index_chunks.index\n",
       "INFO: [base] Connected to neo4j at neo4j://localhost:7687\n",
       "INFO: [base] Ensured B-Tree index on entity_id for base in neo4j\n",
       "INFO: [base] Found existing index 'entity_id_fulltext_idx' with state: ONLINE\n",
-      "INFO: [base] Full-text index 'entity_id_fulltext_idx' already exists and is online. Skipping recreation.\n",
-      "INFO: LLM func: 4 new workers initialized (Timeouts: Func: 180s, Worker: 360s, Health Check: 375s)\n",
-      "INFO: Query nodes: Sofia Stafylaraki (top_k:7, cosine:0.2)\n",
-      "INFO: Embedding func: 8 new workers initialized (Timeouts: Func: 30s, Worker: 60s, Health Check: 75s)\n",
-      "INFO: Local query: 7 entites, 34 relations\n",
-      "INFO: Query edges: Employment, Professional affiliations (top_k:7, cosine:0.2)\n",
-      "INFO: Global query: 11 entites, 7 relations\n",
-      "INFO: Naive query: 20 chunks (chunk_top_k:20 cosine:0.2)\n",
-      "INFO: Raw search results: 17 entities, 40 relations, 20 vector chunks\n",
-      "INFO: After truncation: 17 entities, 40 relations\n",
-      "INFO: Selecting 38 from 38 entity-related chunks by vector similarity\n",
-      "INFO: Find no additional relations-related chunks from 40 relations\n",
-      "INFO: Round-robin merged chunks: 58 -> 38 (deduplicated 20)\n",
-      "INFO: Final context: 17 entities, 40 relations, 20 chunks\n",
-      "INFO: Final chunks S+F/O: E4/1 E2/2 E3/3 E4/4 E5/5 E1/6 E3/7 E4/8 E3/9 E3/10 E3/11 E2/12 E2/13 E3/14 E4/15 E2/16 E4/17 E3/18 E5/19 E3/20\n"
+      "INFO: [base] Full-text index 'entity_id_fulltext_idx' already exists and is online. Skipping recreation.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Role of Sofia Stafylaraki\n",
-      "According to the provided context, Sofia Stafylaraki works for Arian Maritime. This is supported by multiple email exchanges that mention her as a representative or employee of the company.\n",
-      "\n",
-      "### Specific Details about Arian Maritime\n",
-      "Arian Maritime appears to be a shipping company that manages various aspects of shipping and logistics operations. The organization has employees, including Sofia Stafylaraki and Athina Begka, who are involved in operational tasks and communication with clients or partners.\n",
-      "\n",
-      "### Evidence from Email Communications\n",
-      "The email exchanges provided in the context demonstrate Sofia's involvement in managing shipping operations for Arian Maritime. Her emails often reference shipping schedules, cargo details, and updates on vessel arrivals and departures.\n",
-      "\n",
-      "### Conclusion about Sofia Stafylaraki's Role\n",
-      "Based on the available information, it is clear that Sofia Stafylaraki plays a significant role at Arian Maritime, contributing to the company's operational tasks and communication with external parties.\n",
-      "\n",
-      "### References\n",
-      "\n",
-      "- [1] Document Title One\n"
+      "nodes=[] edges=[] is_truncated=False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3671146/1940567959.py:36: RuntimeWarning: coroutine 'LightRAG.get_knowledge_graph' was never awaited\n",
+      "  graph = await rag.get_knowledge_graph(\"base\")\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
      ]
     }
    ],
@@ -141,11 +122,9 @@
     "await rag.initialize_storages()\n",
     "# Ensure shared dicts exist\n",
     "initialize_share_data()\n",
-    "# Initialize pipeline status for document processing\n",
-    "await initialize_pipeline_status()\n",
     "\n",
-    "response = await rag.aquery(\"Who does Sofia Stafylaraki work for?\", param=QueryParam(mode=\"mix\", top_k=7, enable_rerank=False))\n",
-    "print(response)\n"
+    "graph = await rag.get_knowledge_graph(\"base\")\n",
+    "print(graph)\n"
    ]
   }
  ],
